Revision history for Email-Sender

{{$NEXT}}

1.300020  2015-09-03 14:00:04-04:00 America/New_York
        - no changes since 1.300019

1.300019  2015-08-10 15:48:02-04:00 America/New_York (TRIAL RELEASE)
        - only work around Net::SMTP on broken (pre-3.07) versions
        - avoid uninitialized warning when delivering to Maildir

1.300018  2015-05-27 15:28:44-04:00 America/New_York
        - stable release of changes from 1.300017

1.300017  2015-05-14 13:17:39-04:00 America/New_York (TRIAL RELEASE)
        - cope with a double-encoding bug in Net::SMTP
          for details, https://rt.cpan.org/Ticket/Display.html?id=104433

1.300016  2014-10-10 22:54:00-04:00 America/New_York
        - no changes since 1.300015, just made non-trial release

1.300015  2014-09-12 22:01:37-04:00 America/New_York (TRIAL RELEASE)
          [THIS MIGHT BREAK YOUR CODE]
        - version 1.300008 was meant to rewrite line endings when sending to
          sendmail, but the change was not effective; it has been fixed

1.300014  2014-08-28 14:21:26-04:00 America/New_York
        - do not try passing an empty string as a Failure message

1.300013  2014-08-28 11:00:16-04:00 America/New_York
        - sometimes, if no error is given and $smtp->message returns (),
          the arguments to the Failure constructor were out of alignment and
          the failure's error message would be "code"; this has been fixed

1.300012  2014-07-10 09:55:35-04:00 America/New_York
        - documentation fix: there's no Email::MIME->delete_header
          (thanks, Kris Matthews)

1.300011  2014-03-02 18:16:12-05:00 America/New_York
        - run the sendmail program with -i by default (thanks, William Blunn)
        - do not die when a race causes mkpath(Maildir/new) to fail because the
          directory already exists

1.300010  2014-01-11 14:15:13-05:00 America/New_York
        - the SMTP transport now has a "debug" option

1.300009  2013-09-01 12:03:06 America/New_York