@@ -1,6 +1,7 @@
 Revision history for Email-Sender
 
 {{$NEXT}}
+        - when SMTP connection fails, include host and port in error
 
 1.300020  2015-09-03 14:00:04-04:00 America/New_York
         - no changes since 1.300019
